--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
 }
-.gpt3__header_content{
+.gpt3__header-content{
     flex: 1;
     display: flex;
     justify-content: center;
@@ -19,7 +19,7 @@
 }
 .gpt3__header-content p{
     font-family: var(--font-family);
-    font-size: 27px;
+    font-size: 20px;
     line-height: 27px;
     color: var(--color-text);
     margin-top: 1.5rem;
@@ -27,6 +27,7 @@
 .gpt3__header-content__input{
     width: 100%;
     margin: 2rem 0 1rem;
+
     display: flex;
 }
 .gpt3__header-content__input input{
@@ -51,7 +52,7 @@
     background: #ff4820;
     font-family: var(--font-family);
     font-weight: bold;
-    font-size: 20px;
+    font-size: 19px;
     line-height: 27px;
     color:#fff;
     cursor: pointer;
