--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: var(--font-family);
 }
 body{
     background: var(--color-bg);
