--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -62,7 +62,7 @@
     align-items: flex-end;
     flex-direction: column;
     text-align: end;
-    background: var(--color--footer);
+    background: #031B34;
     padding: 2rem;
     position: absolute;
     top: 40px;
@@ -70,7 +70,7 @@
     margin-top: 1rem;
     min-width: 210px;
     border-radius: 5px;
-    box-shadow: 0 0 5 rgba(0,0,0,0.2);
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 .gpt3__navbar-menu_container p{
     margin: 1rem 0;
@@ -95,6 +95,7 @@
 @media screen and (max-width:550px) {
     .gpt3__navbar{
         padding:2rem;
+        background: var(--color--footer);
     }
     .gpt3__navbar-sign{
         display: none;
